--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
-		<h2 id="playerOne" class="activePlayer">Player 1</h2>
-		<h2 id="playerTwo">Player 2</h2>
-		<div class="board" id="bored">
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+    	<meta charset="utf-8">
+    	<meta name="description" content="Your description goes here">
+    	<meta name="keywords" content="one, two, three">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Group Tic Tac Toe</title>
 
-		<div id="row1">
-			<div class="boxes" id=0>0</div>
-			<div class="boxes" id=1>1</div>
-			<div class="boxes" id=2>2</div>
-		</div>
-		<div id="row2">
-			<div class="boxes" id=3>3</div>
-			<div class="boxes" id=4>4</div>
-			<div class="boxes" id=5>5</div>
-		</div>
-		<div id="row3">
-			<div class="boxes" id=6>6</div>
-			<div class="boxes" id=7>7</div>
-			<div class="boxes" id=8>8</div>
+		<!-- external CSS link -->
+		<div class="playerContainer">
+		<div>
+		<h2 id="playerOne" class="activePlayer player">Player 1</h2>
+		<!-- <h3>Score: 0</h3> -->
 		</div>
 		<div>
+		<h2 id="playerTwo" class="player">Player 2</h2>
+		<!-- <h3>Score: 0</h3> -->
+		</div>
+		</div>
+		<div class="buttons">
+		<input id="reset" type="button" value="Reset Game">
+		<!-- <input type="button" value="New Round"> -->
+		</div>
+		<div class="board" id="bored">
+		
+	
+
+		<div id="row1">
+			<div class="boxes" id=0></div>
+			<div class="boxes" id=1></div>
+			<div class="boxes" id=2></div>
+		</div>
+		<div id="row2">
+			<div class="boxes" id=3></div>
+			<div class="boxes" id=4></div>
+			<div class="boxes" id=5></div>
+		</div>
+		<div id="row3">
+			<div class="boxes" id=6></div>
+			<div class="boxes" id=7></div>
+			<div class="boxes" id=8></div>
+		</div>
+		<div>
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+
+		<script type="text/javascript" src="js/main.js"></script>
+	</body>
+</html>
