corrected links to js/css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
 		<title>Group Tic Tac Toe</title>
 
 		<!-- external CSS link -->
@@ -47,6 +48,6 @@
 	</head>
 	<body>
 
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
