put some functions in an obj

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<!-- external CSS link -->
 		<div class="playerContainer">
 		<div>
-		<h2 id="playerOne" class="activePlayer player">Player 1</h2>
+		<h2 id="playerOne" class="activePlayer player">Player X</h2>
 		<!-- <h3>Score: 0</h3> -->
 		</div>
 		<div>
-		<h2 id="playerTwo" class="player">Player 2</h2>
+		<h2 id="playerTwo" class="player">Player O</h2>
 		<!-- <h3>Score: 0</h3> -->
 		</div>
 		</div>
