--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Your description goes here">
-    	<meta name="keywords" content="one, two, three">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-		<title>Group Tic Tac Toe</title>
-	</head>
-<body>	
-		<div class="playerContainer">
-			<div>
-				<h2 id="playerOne" class="activePlayer player">Player X</h2>
-				<!-- <h3>Score: 0</h3> -->
-			</div>
-			<div>
-				<h2 id="playerTwo" class="player">Player O</h2>
-				<!-- <h3>Score: 0</h3> -->
-			</div>
-		</div>
-		<div class="buttons">
-			<input id="reset" type="button" value="Reset Game">
-			<!-- <input type="button" value="New Round"> -->
-		</div>
-		<div class="board" id="bored">
-			<div id="overlay"> <div id="text"></div></div>
-				<div id="row1">
-					<div class="boxes" id=0></div>
-					<div class="boxes" id=1></div>
-					<div class="boxes" id=2></div>
-				</div>
-				<div id="row2">
-					<div class="boxes" id=3></div>
-					<div class="boxes" id=4></div>
-					<div class="boxes" id=5></div>
-				</div>
-				<div id="row3">
-					<div class="boxes" id=6></div>
-					<div class="boxes" id=7></div>
-					<div class="boxes" id=8></div>
-				</div>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+        rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+</head>
 
-		</div>
-		<script type="text/javascript" src="script.js"></script>
+<body>
+    <div class="playerContainer">
+        <span class="player">Turn:</span>
+        <h2 id="playerOne" class="activePlayer player">Player 1</h2>
+        <h2 id="playerTwo" class="player">Player 2</h2>
+    </div>
+    <div class="buttons">
+        <input id="reset" type="button" value="Reset" />
+    </div>
+    <section class="board" id="board">
+        <div id="overlay">
+            <div id="text"></div>
+        </div>
+        <div id="0" class="boardPiece leftCol topRow"></div>
+        <div id="1" class="boardPiece centerCol topRow"></div>
+        <div id="2" class="boardPiece rightCol topRow"></div>
+        <div id="3" class="boardPiece leftCol middleRow"></div>
+        <div id="4" class="boardPiece centerCol middleRow"></div>
+        <div id="5" class="boardPiece rightCol middleRow"></div>
+        <div id="6" class="boardPiece leftCol bottomRow"></div>
+        <div id="7" class="boardPiece centerCol bottomRow"></div>
+        <div id="8" class="boardPiece rightCol bottomRow"></div>
+    </section>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
-</html>
