--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,7 +20,15 @@
         <h2 id="playerTwo" class="player">Player 2</h2>
     </div>
     <div class="buttons">
-        <input id="reset" type="button" value="Reset" />
+        <ul>
+            <li><input id="reset" type="button" value="Reset" /></li>
+            <li><input id="mute-btn" type="button" value="Mute" /></li>
+        </ul>
+        <audio loop>
+            <source src="assets\Cut_the_Strings.mp3" type="audio/mpeg">
+            <source src="assets\Cut_the_Strings.ogg" type="audio/ogg">
+
+        </audio>
     </div>
     <section class="board" id="board">
         <div id="overlay">
